--- a/styles/main.scss
+++ b/styles/main.scss
@@ -161,7 +161,7 @@ header {
       pointer-events: none;
       position: absolute;
       left: -20px;
-      top: 100%;
+      top: 43px;
       background-color: #f5fbfe;
       display: inline-flex;
       padding: 20px;
@@ -184,6 +184,9 @@ header {
         margin-left: 10px;
         transition: 0.3s ease-in-out;
       }
+      .arch_link-extend_menu {
+        padding-bottom: 49px;
+      }
     }
     .extend-menu-second {
       transition: 0.1s ease-in-out;
@@ -192,7 +195,7 @@ header {
       pointer-events: none;
       position: absolute;
       left: 225px;
-      top: 100%;
+      top: 43px;
       background-color: #f5fbfe;
       display: inline-flex;
       padding: 20px;
@@ -833,6 +836,9 @@ header {
 .thanks_mail {
   height: 581px;
   padding-top: 85px;
+  z-index: 15;
+  position: relative;
+  background-color: #fff;
   .container {
     position: relative;
     h2 {
@@ -1025,7 +1031,132 @@ header {
 }
 
 .contacts {
-  height: 90vh;
+  min-height: 863px;
+  position: relative;
+  #map {
+    position: absolute;
+    width: 50%;
+    left: 0;
+    top: 0;
+    z-index: 15;
+  }
+  .white_blank {
+    background: #fff;
+    width: 50%;
+    position: absolute;
+    right: 0;
+    height: 100%;
+    top: 0;
+    .white_blank_box {
+      margin: 86px 0px 106px 108px;
+      h2 {
+        font-weight: 600;
+        font-size: 36px;
+        line-height: 44px;
+        color: #000000;
+        margin-bottom: 12px;
+      }
+      p {
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 22px;
+        max-width: 412px;
+        margin-bottom: 45px;
+      }
+      .address {
+        max-width: 421px;
+        display: flex;
+        align-items: flex-start;
+        margin-bottom: 25px;
+        height: 50px;
+        img {
+          margin-right: 15px;
+          margin-top: 5px;
+          height: 25px;
+        }
+      }
+      .phone_numbers {
+        display: flex;
+        align-items: flex-start;
+        height: 90px;
+        span {
+          color: #3bb9ff;
+          font-size: 24px;
+          font-weight: bold;
+        }
+        img {
+          margin-right: 15px;
+          margin-top: 2px;
+          height: 25px;
+        }
+      }
+      .email {
+        display: flex;
+        align-items: flex-start;
+        height: 50px;
+        span{
+            color: #3bb9ff;;
+        }
+        img {
+          margin-right: 15px;
+          height: 25px;
+        }
+      }
+      .clock {
+        display: flex;
+        align-items: flex-start;
+        img {
+          margin-left: 2px;
+          margin-right: 15px;
+          margin-top: 5px;
+          width: 22px;
+        }
+        span {
+          color: #909090;
+          font-size: 14px;
+        }
+      }
+      .download {
+        font-size: 18px;
+        color: #fff;
+        background: #3bb9ff;
+        border-radius: 5px;
+        border: 0px;
+        padding: 20px 20px 20px 30px;
+        width: 500px;
+        height: 60px;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 30px;
+        img {
+          position: relative;
+          top: -5px;
+        }
+      }
+      .save {
+        border-radius: 2px;
+        border: 1px solid #3bb9ff;
+        height: 108px;
+        width: 426px;
+        padding-top: 26px;
+        padding-left: 30px;
+        padding-right: 34px;
+        .shortcut {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+          .big_blue {
+            color: #3bb9ff;
+            font-style: normal;
+            font-weight: 800;
+            font-size: 40px;
+            line-height: 49px;
+            width: 215px;
+          }
+        }
+      }
+    }
+  }
 }
 
 footer {
@@ -1053,21 +1184,21 @@ footer {
         font-weight: 400;
       }
     }
-    .foot_right{
-        display: flex;
-        align-items: flex-end;
-        flex-direction: column;
-        justify-content: center;
-        align-content: stretch;
-        flex-wrap: wrap;
-        img{
-            width: 123px;
-        }
-        a{
-            color: #fff;
-            font-size: 16px;
-            margin-bottom: 14px;
-        }
+    .foot_right {
+      display: flex;
+      align-items: flex-end;
+      flex-direction: column;
+      justify-content: center;
+      align-content: stretch;
+      flex-wrap: wrap;
+      img {
+        width: 123px;
+      }
+      a {
+        color: #fff;
+        font-size: 16px;
+        margin-bottom: 14px;
+      }
     }
   }
 }
