--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import '../fonts/stylesheet.css';
 * {
   padding: 0;
   margin: 0;
@@ -13,6 +14,10 @@ body {
   font-family: Proxima Nova, sans-serif;
 }
 
+img {
+  pointer-events: none;
+}
+
 .container {
   height: 100%;
   margin: 0 auto;
@@ -24,8 +29,8 @@ button {
   transition: ease 0.3s;
 }
 button:hover {
-  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
-          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+  -webkit-box-shadow: 0px 0px 10px rgba(99, 99, 99, 0.8);
+          box-shadow: 0px 0px 10px rgba(99, 99, 99, 0.8);
   -webkit-transition: ease 0.3s;
   transition: ease 0.3s;
 }
@@ -70,6 +75,11 @@ header .navbar .first {
 header .navbar .navbar_item-phones > span {
   font-size: 16px;
   color: #000;
+}
+header .navbar .navbar_item-phones > span a {
+  color: #000;
+  text-decoration: none;
+  font-weight: 400;
 }
 header .navbar .navbar_item-phones > svg {
   margin-left: 10px;
@@ -416,6 +426,9 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   color: #909090;
   font-size: 14px;
 }
+.works .container .category a.category__disable:hover {
+  color: #1a1a1a;
+}
 .works .container .breadcrumbs {
   margin-bottom: 15px;
 }
@@ -428,6 +441,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
 }
 .works .container .button_mdl_blue {
   font-size: 18px;
+  font-family: Proxima Nova, sans-serif;
   background: -webkit-gradient(linear, right top, left top, from(#3cb9ff), to(#00a3ff));
   background: linear-gradient(270deg, #3cb9ff 0%, #00a3ff 100%);
   border: 0px;
@@ -441,6 +455,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
 }
 .works .container .button_mdl_white {
   font-size: 18px;
+  font-family: Proxima Nova, sans-serif;
   background: #fff;
   border: 1px #3cb9ff solid;
   color: #000;
@@ -522,17 +537,21 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
 }
 .documentation .container .swiper-button-prev.sec {
   position: relative !important;
-  top: -350px;
+  top: -368px;
   left: 0;
   display: block;
+  width: 61px;
+  height: 61px;
 }
 .documentation .container .swiper-button-next.sec {
   position: relative !important;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
-  top: -350px;
-  right: -1200px;
+  top: -410px;
+  right: -94%;
   display: block;
+  width: 61px;
+  height: 61px;
 }
 .documentation .container .stars_el {
   position: absolute;
@@ -610,6 +629,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   top: 0px;
   right: -400px;
   z-index: 4;
+  pointer-events: none;
 }
 .form_raschet .border_box {
   margin: 0px 0px 145px 0px;
@@ -679,6 +699,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   font-size: 18px;
   line-height: 22px;
   outline: 1px black;
+  font-family: Proxima Nova, sans-serif;
 }
 .form_raschet .border_box .inputs form .inputs_cell .select_after {
   position: relative;
@@ -695,6 +716,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
      -moz-appearance: none;
           appearance: none;
   overflow: hidden;
+  font-family: Proxima Nova, sans-serif;
 }
 .form_raschet .border_box .inputs form .inputs_cell .select_after::after {
   content: "";
@@ -722,6 +744,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   cursor: pointer;
   -webkit-transition: ease 0.3s;
   transition: ease 0.3s;
+  font-family: Proxima Nova, sans-serif;
 }
 .form_raschet .border_box .inputs form .inputs_cell:last-child {
   position: relative;
@@ -755,9 +778,11 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
 }
 .slider_two_rows .container .buttons {
   margin: 0 auto;
-  width: 340px;
+  width: 100%;
+  text-align: center;
 }
 .slider_two_rows .container .buttons .button_mdl_blue {
+  font-family: Proxima Nova, sans-serif;
   font-size: 18px;
   background: -webkit-gradient(linear, right top, left top, from(#3cb9ff), to(#00a3ff));
   background: linear-gradient(270deg, #3cb9ff 0%, #00a3ff 100%);
@@ -771,6 +796,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   cursor: pointer;
 }
 .slider_two_rows .container .buttons .button_mdl_white {
+  font-family: Proxima Nova, sans-serif;
   font-size: 18px;
   background: #fff;
   border: 1px #3cb9ff solid;
@@ -945,14 +971,18 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   top: -181px;
   left: 0;
   display: block;
+  width: 61px;
+  height: 61px;
 }
 .thanks_mail .container .swiper-button-next.four {
   position: relative !important;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
-  top: -181px;
-  right: -1185px;
+  top: -220px;
+  right: -94%;
   display: block;
+  width: 61px;
+  height: 61px;
 }
 .thanks_mail .container .swiper-pagination.four {
   bottom: 85px;
@@ -1047,6 +1077,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   margin-bottom: 10px;
 }
 .form_question .container .border_box .inputs form .flex-wrap .textbox textarea {
+  font-family: Proxima Nova, sans-serif;
   padding: 15px 17px;
   font-size: 18px;
   line-height: 22px;
@@ -1071,6 +1102,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   margin-bottom: 10px;
 }
 .form_question .container .border_box .inputs form .flex-wrap .number input {
+  font-family: Proxima Nova, sans-serif;
   width: 333px;
   height: 22px;
   border: 0px;
@@ -1095,6 +1127,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
      -moz-appearance: none;
           appearance: none;
   overflow: hidden;
+  font-family: Proxima Nova, sans-serif;
 }
 .form_question .container .border_box .inputs form .flex-wrap .number .select_after::after {
   content: "";
@@ -1123,6 +1156,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   -webkit-transition: ease 0.3s;
   transition: ease 0.3s;
   margin-top: 20px;
+  font-family: Proxima Nova, sans-serif;
 }
 
 .contacts {
@@ -1155,7 +1189,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   margin-bottom: 12px;
 }
 .contacts .white_blank .white_blank_box p {
-  font-weight: normal;
+  font-weight: 500;
   font-size: 18px;
   line-height: 22px;
   max-width: 412px;
@@ -1171,6 +1205,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
           align-items: flex-start;
   margin-bottom: 25px;
   height: 50px;
+  font-weight: 500;
 }
 .contacts .white_blank .white_blank_box .address img {
   margin-right: 15px;
@@ -1178,6 +1213,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   height: 25px;
 }
 .contacts .white_blank .white_blank_box .phone_numbers {
+  font-weight: 500;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1191,12 +1227,17 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   font-size: 24px;
   font-weight: bold;
 }
+.contacts .white_blank .white_blank_box .phone_numbers span a {
+  text-decoration: none;
+  color: #3bb9ff;
+}
 .contacts .white_blank .white_blank_box .phone_numbers img {
   margin-right: 15px;
   margin-top: 2px;
   height: 25px;
 }
 .contacts .white_blank .white_blank_box .email {
+  font-weight: 500;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1205,7 +1246,11 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
           align-items: flex-start;
   height: 50px;
 }
-.contacts .white_blank .white_blank_box .email span {
+.contacts .white_blank .white_blank_box .email a {
+  text-decoration: none;
+  color: #3bb9ff;
+}
+.contacts .white_blank .white_blank_box .email a span {
   color: #3bb9ff;
 }
 .contacts .white_blank .white_blank_box .email img {
@@ -1213,6 +1258,7 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
   height: 25px;
 }
 .contacts .white_blank .white_blank_box .clock {
+  font-weight: 500;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1232,6 +1278,8 @@ header .navbar_menu .navbar_menu-item > .navbar_extended_box:hover .arrow-second
 }
 .contacts .white_blank .white_blank_box .download {
   font-size: 18px;
+  font-weight: bold;
+  font-family: Proxima Nova, sans-serif;
   color: #fff;
   background: #3bb9ff;
   border-radius: 5px;
